# Brick_game_2

./: .gitignore  CMakeLists.txt  README.md
src/: Makefile
src/brick_game/: common.h  controller.h
src/brick_game/snake/: apple.cpp  apple.h  field.cpp  field.h  game_state.h  point.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h  snake_interface.cpp
src/brick_game/snake/states/: game_over_state.cpp  game_over_state.h  idle_state.cpp  idle_state.h  paused_state.cpp  paused_state.h  playing_state.cpp  playing_state.h
src/brick_game/tetris/: test.c  tetris_lib.c  tetris_lib.h
src/gui/cli/: brick_game_cli.c  brick_game_cli.h
src/gui/desktop/: mainwindow.cpp  mainwindow.h
src/tests/: test_snake_game.cpp
